# data_master

./: .gitignore  app_state_manager.py  compare.py  data_manager.py  font_test.py  iris_dataset.parquet  main_app.py  ollama_analyzer.py  ollama_integration.py  pyproject.toml  step_01_data_loading.py  step_02_exploratory_data_analysis.py  step_02a_sva.py  step_02b_mva.py  step_03_preprocessing.py  step_04_missing_values.py  step_05_outlier_treatment.py  step_05a_univariate_outliers.py  step_05b_multivariate_outliers.py  step_06_standardization.py  step_07_feature_engineering.py  step_08_derivation.py  step_09_data_viewer.py  step_10_advanced_analysis.py  step_10_analysis.py  step_10_backup.py  step_10_ui.py  step_10_visualization.py  step_11_ml_modeling.py  test.ipynb  utils.py  your_report.html
data/: 20250529_100924_137856_GooglePlayPoints2024_short_test_ko.pptx  2504_temp2.parquet  GooglePlayPoints제안자료2024_short_test.pptx
