[project]
name = "data-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dearpygui>=2.0.0",
    "factor-analyzer>=0.5.1",
    "fastparquet>=2024.11.0",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "pyarrow>=20.0.0",
    "pyod>=2.0.5",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "shap>=0.47.2",
    "statsmodels>=0.14.4",
    "umap-learn>=0.5.7",
    "ydata-profiling>=4.16.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
