[project]
name = "data-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogluon>=1.3.1",
    "dearpygui>=2.0.0",
    "openpyxl>=3.1.5",
    "pyod>=2.0.5",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "umap>=0.1.1",
]
